--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="faqs-container">
 
-      <span class="faqs">
+      <div class="faqs">
         <div class="question">
           <h2>What is Frontend Mentor, and how will it help me?</h2>
           <img class="plus-icon" src="assets/images/icon-plus.svg" alt="icon-plus">
@@ -30,9 +30,9 @@
             frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
             all levels and ideal for portfolio building.</p>
         </div>
-      </span>
+      </div>
 
-      <span class="faqs">
+      <div class="faqs">
         <div class="question">
           <h2>Is Frontend Mentor free?</h2>
           <img class="plus-icon" src="assets/images/icon-plus.svg" alt="icon-plus">
@@ -42,9 +42,9 @@
           <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free
             option providing access to a range of projects suitable for all skill levels.</p>
         </div>
-      </span>
+      </div>
 
-      <span class="faqs">
+      <div class="faqs">
         <div class="question">
           <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
           <img class="plus-icon" src="assets/images/icon-plus.svg" alt="icon-plus">
@@ -54,9 +54,9 @@
           <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
             way to showcase your skills to potential employers!</p>
         </div>
-      </span>
+      </div>
       
-      <span class="faqs">
+      <div class="faqs">
         <div class="question">
           <h2>How can I get help if I'm stuck on a challenge?</h2>
           <img class="plus-icon" src="assets/images/icon-plus.svg" alt="icon-plus">
@@ -66,7 +66,7 @@
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help
             channel where you can ask questions and seek support from other community members.</p>
         </div>
-      </span>
+      </div>
 
     </section>
 
